--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=8000
 CONNECTION_URL=mongodb://127.0.0.1:27017/blog-db
 JWT_SECRET = abdul.jabbar123456789
+SENDER_EMAIL =abduljabbarray@gmail.com
+EMAIL_PASSWORD =bwod xdal hbyr dioy
